--- a/src/app/autocomplete/autocomplete.html
+++ b/src/app/autocomplete/autocomplete.html
@@ -1,4 +1,4 @@
-<md-toolbar class="md-whiteframe-z1">  
+<md-toolbar class="md-whiteframe-z1">   
     <div class="md-toolbar-tools panel2" layout="row">
 		<div flex> 
 			<h2 class="black-clr">AUTOCOMPLETE</h2>
@@ -22,7 +22,61 @@
 			  useWrapMode : true,
 			  theme:'merbivore',
 			  mode: 'html'}">
+   &#x9;&#x3C;section layout=&#x22;row&#x22; layout-sm=&#x22;column&#x22; layout-wrap layout-padding style=&#x22;text-align: left&#x22;&#x3E;
+&#x9;&#x9;&#x3C;div flex ng-controller=&#x22;DemoCtrl as ctrl&#x22;&#x3E;
+&#x9;&#x9;  &#x3C;md-content layout-padding layout=&#x22;column&#x22; class=&#x22;nobackground&#x22;&#x3E;
+&#x9;&#x9;    &#x3C;form ng-submit=&#x22;$event.preventDefault()&#x22;&#x3E;
+&#x9;&#x9;      &#x3C;p&#x3E;Use &#x3C;code&#x3E;&#x26;lt;md-autocomplete&#x26;gt;&#x3C;/code&#x3E; to search for matches from local or remote data sources.&#x3C;/p&#x3E;
+&#x9;&#x9;      &#x3C;md-autocomplete
+&#x9;&#x9;          ng-disabled=&#x22;ctrl.isDisabled&#x22;
+&#x9;&#x9;          md-no-cache=&#x22;ctrl.noCache&#x22;
+&#x9;&#x9;          md-selected-item=&#x22;ctrl.selectedItem&#x22;
+&#x9;&#x9;          md-search-text-change=&#x22;ctrl.searchTextChange(ctrl.searchText)&#x22;
+&#x9;&#x9;          md-search-text=&#x22;ctrl.searchText&#x22;
+&#x9;&#x9;          md-selected-item-change=&#x22;ctrl.selectedItemChange(item)&#x22;
+&#x9;&#x9;          md-items=&#x22;item in ctrl.querySearch(ctrl.searchText)&#x22;
+&#x9;&#x9;          md-item-text=&#x22;item.display&#x22;
+&#x9;&#x9;          md-min-length=&#x22;0&#x22;
+&#x9;&#x9;          placeholder=&#x22;What is your favorite US state?&#x22;&#x3E;
+&#x9;&#x9;        &#x3C;md-item-template&#x3E;
+&#x9;&#x9;          &#x3C;span md-highlight-text=&#x22;ctrl.searchText&#x22; md-highlight-flags=&#x22;^i&#x22;&#x3E;{{item.display}}&#x3C;/span&#x3E;
+&#x9;&#x9;        &#x3C;/md-item-template&#x3E;
+&#x9;&#x9;        &#x3C;md-not-found&#x3E;
+&#x9;&#x9;          No matches found for &#x22;{{ctrl.searchText}}&#x22;.
+&#x9;&#x9;        &#x3C;/md-not-found&#x3E;
+&#x9;&#x9;      &#x3C;/md-autocomplete&#x3E;
+&#x9;&#x9;      &#x3C;br/&#x3E;
+&#x9;&#x9;      &#x3C;md-checkbox ng-model=&#x22;ctrl.simulateQuery&#x22; class=&#x22;success-checkbox&#x22;&#x3E;Simulate query for results?&#x3C;/md-checkbox&#x3E;
+&#x9;&#x9;      &#x3C;md-checkbox ng-model=&#x22;ctrl.noCache&#x22; class=&#x22;success-checkbox&#x22;&#x3E;Disable caching of queries?&#x3C;/md-checkbox&#x3E;
+&#x9;&#x9;      &#x3C;md-checkbox ng-model=&#x22;ctrl.isDisabled&#x22; class=&#x22;success-checkbox&#x22;&#x3E;Disable the input?&#x3C;/md-checkbox&#x3E;
+&#x9;&#x9;      &#x3C;p style=&#x22;padding-left: 15px;&#x22;&#x3E;By default, &#x3C;code&#x3E;&#x26;lt;md-autocomplete&#x26;gt;&#x3C;/code&#x3E; will cache results when performing a query.  After the initial call is performed, it will use the cached results to eliminate unnecessary server requests or lookup logic. This can be disabled above.&#x3C;/p&#x3E;
+&#x9;&#x9;    &#x3C;/form&#x3E;
+&#x9;&#x9;  &#x3C;/md-content&#x3E;
+&#x9;    &#x3C;/div&#x3E;
+&#x9;&#x3C;/section&#x3E;
 
+&#x9;&#x3C;section ng-controller=&#x22;DemoCtrl as ctrl&#x22;&#x3E;
+&#x9;  &#x3C;md-content layout-padding layout=&#x22;column&#x22; class=&#x22;nobackground&#x22;&#x3E;
+&#x9;    &#x3C;form ng-submit=&#x22;$event.preventDefault()&#x22;&#x3E;
+&#x9;      &#x3C;p&#x3E;The following example demonstrates floating labels being used as a normal form element.&#x3C;/p&#x3E;
+&#x9;      &#x3C;div layout-gt-sm=&#x22;row&#x22;&#x3E;
+&#x9;        &#x3C;md-input-container flex&#x3E;
+&#x9;          &#x3C;label&#x3E;Name&#x3C;/label&#x3E;
+&#x9;          &#x3C;input type=&#x22;text&#x22;/&#x3E;
+&#x9;        &#x3C;/md-input-container&#x3E;
+&#x9;        &#x3C;md-autocomplete flex
+&#x9;            md-no-cache=&#x22;ctrl.noCache&#x22;
+&#x9;            md-selected-item=&#x22;ctrl.selectedItem&#x22;
+&#x9;            md-search-text=&#x22;ctrl.searchText&#x22;
+&#x9;            md-items=&#x22;item in ctrl.querySearch(ctrl.searchText)&#x22;
+&#x9;            md-item-text=&#x22;item.display&#x22;
+&#x9;            md-floating-label=&#x22;Favorite state&#x22;&#x3E;
+&#x9;          &#x3C;span md-highlight-text=&#x22;ctrl.searchText&#x22;&#x3E;{{item.display}}&#x3C;/span&#x3E;
+&#x9;        &#x3C;/md-autocomplete&#x3E;
+&#x9;      &#x3C;/div&#x3E;
+&#x9;    &#x3C;/form&#x3E;
+&#x9;  &#x3C;/md-content&#x3E;&#x9;&#x9;
+&#x9;&#x3C;/section&#x3E;
 			</div>	
 		</md-tab>
 		<md-tab label="CSS">
@@ -40,6 +94,78 @@
 			  showGutter: false,
 			  theme:'merbivore',
 			  mode: 'javascript'}">
+(function() {  
+    'use strict';
+
+    angular.module('fm')
+
+        .controller('DemoCtrl', DemoCtrl);
+
+
+		    function DemoCtrl ($timeout, $q, $log) {
+		    var self = this;
+		    self.simulateQuery = false;
+		    self.isDisabled    = false;
+		    // list of `state` value/display objects
+		    self.states        = loadAll();
+		    self.querySearch   = querySearch;
+		    self.selectedItemChange = selectedItemChange;
+		    self.searchTextChange   = searchTextChange;
+		    // ******************************
+		    // Internal methods
+		    // ******************************
+		    /**
+		     * Search for states... use $timeout to simulate
+		     * remote dataservice call.
+		     */
+		    function querySearch (query) {
+		      var results = query ? self.states.filter( createFilterFor(query) ) : self.states,
+		          deferred;
+		      if (self.simulateQuery) {
+		        deferred = $q.defer();
+		        $timeout(function () { deferred.resolve( results ); }, Math.random() * 1000, false);
+		        return deferred.promise; 
+		      } else {
+		        return results;
+		      }
+		    }
+		    function searchTextChange(text) {
+		      $log.info('Text changed to ' + text);
+		    }
+		    function selectedItemChange(item) {
+		      $log.info('Item changed to ' + JSON.stringify(item));
+		    }
+		    /**
+		     * Build `states` list of key/value pairs
+		     */
+		    function loadAll() {
+		      var allStates = 'Alabama, Alaska, Arizona, Arkansas, California, Colorado, Connecticut, Delaware,\
+		              Florida, Georgia, Hawaii, Idaho, Illinois, Indiana, Iowa, Kansas, Kentucky, Louisiana,\
+		              Maine, Maryland, Massachusetts, Michigan, Minnesota, Mississippi, Missouri, Montana,\
+		              Nebraska, Nevada, New Hampshire, New Jersey, New Mexico, New York, North Carolina,\
+		              North Dakota, Ohio, Oklahoma, Oregon, Pennsylvania, Rhode Island, South Carolina,\
+		              South Dakota, Tennessee, Texas, Utah, Vermont, Virginia, Washington, West Virginia,\
+		              Wisconsin, Wyoming';
+		      return allStates.split(/, +/g).map( function (state) {
+		        return {
+		          value: state.toLowerCase(),
+		          display: state
+		        };
+		      });
+		    }
+		    /**
+		     * Create filter function for a query string
+		     */
+		    function createFilterFor(query) {
+		      var lowercaseQuery = angular.lowercase(query);
+		      return function filterFn(state) {
+		        return (state.value.indexOf(lowercaseQuery) === 0);
+		      };
+		    }
+
+			}
+
+})();
        
 
     			</div>	
