--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,3 +1,29 @@
+.leftmenu-details {
+    max-height: 500px;
+    transition: .8s;
+    overflow-x: scroll;
+}
+
+.leftmenu-details.hidden {
+    max-height: 0;
+    //display:none
+}
+
+.mainul {
+	@extend .side-nav;
+
+	.ulink {
+		text-transform: uppercase;
+		padding: 25px 16px 25px 32px;
+		display: block;
+		color: #333;
+		text-decoration: none;
+		border-bottom: 1px solid #dde3e7;
+		box-shadow: none;
+		outline: none;
+	}
+}
+
 .side-nav {
 	padding: 0;
 	margin: 0;
@@ -11,6 +37,7 @@
 		margin: 0;
 		border-bottom: 1px solid #dde3e7;
 		border-radius: 0;
+		text-transform: none;
 	}
 }
 
@@ -563,3 +590,4 @@ md-autocomplete button {
  }	
 
 }
+
