Line charts was created

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -574,6 +574,9 @@ md-autocomplete button {
 	bottom: 10px!important;
 }
 
+.highcharts-background {
+	background-image: url(../assets/images/sand.png);
+}
 
 
 /*====MEDIA====*/
