--- a/src/app/column-bar-charts/column-bar-charts.html
+++ b/src/app/column-bar-charts/column-bar-charts.html
@@ -1,4 +1,4 @@
-<md-toolbar class="md-whiteframe-z1">   
+<md-toolbar class="md-whiteframe-z1">    
     <div class="md-toolbar-tools panel2" layout="row">
 		<div flex> 
 			<h2 class="black-clr">COLUMN AND BAR CHARTS</h2>
@@ -22,6 +22,20 @@
 			  useWrapMode : true,
 			  theme:'merbivore',
 			  mode: 'html'}">
+&#x3C;!--Basic Bar--&#x3E;
+&#x3C;div id=&#x22;basic_bar&#x22; style=&#x22;min-width: 310px; height: 400px; margin: 0 auto&#x22;&#x3E;&#x3C;/div&#x3E;
+
+&#x3C;!--Stacked Bar--&#x3E;
+&#x3C;div id=&#x22;stacked_bar&#x22; style=&#x22;min-width: 310px; height: 400px; margin: 0 auto&#x22;&#x3E;&#x3C;/div&#x3E;
+
+&#x3C;!--Basic Column--&#x3E;
+&#x3C;div id=&#x22;basic_column&#x22; style=&#x22;min-width: 310px; height: 400px; margin: 0 auto&#x22;&#x3E;&#x3C;/div&#x3E;
+
+&#x3C;!--Stacked Column--&#x3E;
+&#x3C;div id=&#x22;stacked_column&#x22; style=&#x22;min-width: 310px; height: 400px; margin: 0 auto&#x22;&#x3E;&#x3C;/div&#x3E;
+
+&#x3C;!--Column with rotated labels--&#x3E;
+&#x3C;div id=&#x22;column_rotated_label&#x22; style=&#x22;min-width: 310px; height: 400px; margin: 0 auto&#x22;&#x3E;&#x3C;/div&#x3E;
 
 			</div>	
 		</md-tab>
@@ -41,6 +55,344 @@
 			  theme:'merbivore',
 			  mode: 'javascript'}">
 
+(function() {    
+    'use strict';
+
+    angular.module('fm')
+        .controller('ColBarCtrl', ColBarCtrl);
+
+    ColBarCtrl.$inject = ['$scope']
+
+    function ColBarCtrl($scope) {
+        var vm = this;
+
+        /*===============Basic bar================*/
+        var BasicBar = new Highcharts.Chart({
+            chart: {
+                renderTo: 'basic_bar',
+                type: 'bar'
+            },
+            title: {
+                text: 'Basic Bar'
+            },
+            subtitle: {
+                text: 'Source: Fleet Management'
+            },
+            xAxis: {
+                categories: ['Africa', 'America', 'Asia', 'Europe', 'Oceania'],
+                title: {
+                    text: null
+                }
+            },
+            yAxis: {
+                min: 0,
+                title: {
+                    text: 'Population (millions)',
+                    align: 'high'
+                },
+                labels: {
+                    overflow: 'justify'
+                }
+            },
+            tooltip: {
+                valueSuffix: ' millions'
+            },
+            plotOptions: {
+                bar: {
+                    dataLabels: {
+                        enabled: true
+                    }
+                }
+            },
+            legend: {
+                layout: 'vertical',
+                align: 'right',
+                verticalAlign: 'top',
+                x: -40,
+                y: 100,
+                floating: true,
+                borderWidth: 1,
+                backgroundColor: ((Highcharts.theme && Highcharts.theme.legendBackgroundColor) || '#FFFFFF'),
+                shadow: true
+            },
+            credits: {
+                enabled: false
+            },
+            series: [{
+                name: 'Year 1800',
+                data: [107, 31, 635, 203, 2]
+            }, {
+                name: 'Year 1900',
+                data: [133, 156, 947, 408, 6]
+            }, {
+                name: 'Year 2008',
+                data: [973, 914, 4054, 732, 34]
+            }]
+        });
+
+        /*==============//Basic bar==============*/
+
+
+        /*==============Stacked bar==============*/
+        var StackedBar = new Highcharts.Chart({
+            chart: {
+                renderTo: 'stacked_bar',
+                type: 'bar'
+            },
+            title: {
+                text: 'Stacked bar chart'
+            },
+            xAxis: {
+                categories: ['Apples', 'Oranges', 'Pears', 'Grapes', 'Bananas']
+            },
+            yAxis: {
+                min: 0,
+                title: {
+                    text: 'Total fruit consumption'
+                }
+            },
+            legend: {
+                reversed: true
+            },
+            plotOptions: {
+                series: {
+                    stacking: 'normal'
+                }
+            },
+            series: [{
+                name: 'John',
+                data: [5, 3, 4, 7, 2]
+            }, {
+                name: 'Jane',
+                data: [2, 2, 3, 2, 1]
+            }, {
+                name: 'Joe',
+                data: [3, 4, 4, 2, 5]
+            }]
+        });
+        /*==============//Stacked bar==============*/
+
+
+        /*==============Basic Column==============*/
+        var BasicCol = new Highcharts.Chart({
+            chart: {
+                renderTo: 'basic_column',
+                type: 'column'
+            },
+            title: {
+                text: 'Basic Column'
+            },
+            subtitle: {
+                text: 'Source: Fleet Management'
+            },
+            xAxis: {
+                categories: [
+                    'Jan',
+                    'Feb',
+                    'Mar',
+                    'Apr',
+                    'May',
+                    'Jun',
+                    'Jul',
+                    'Aug',
+                    'Sep',
+                    'Oct',
+                    'Nov',
+                    'Dec'
+                ],
+                crosshair: true
+            },
+            yAxis: {
+                min: 0,
+                title: {
+                    text: 'Rainfall (mm)'
+                }
+            },
+            tooltip: {
+                headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+                pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
+                    '<td style="padding:0"><b>{point.y:.1f} mm</b></td></tr>',
+                footerFormat: '</table>',
+                shared: true,
+                useHTML: true
+            },
+            plotOptions: {
+                column: {
+                    pointPadding: 0.2,
+                    borderWidth: 0
+                }
+            },
+            series: [{
+                name: 'Tokyo',
+                data: [49.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4]
+
+            }, {
+                name: 'New York',
+                data: [83.6, 78.8, 98.5, 93.4, 106.0, 84.5, 105.0, 104.3, 91.2, 83.5, 106.6, 92.3]
+
+            }, {
+                name: 'London',
+                data: [48.9, 38.8, 39.3, 41.4, 47.0, 48.3, 59.0, 59.6, 52.4, 65.2, 59.3, 51.2]
+
+            }, {
+                name: 'Berlin',
+                data: [42.4, 33.2, 34.5, 39.7, 52.6, 75.5, 57.4, 60.4, 47.6, 39.1, 46.8, 51.1]
+
+            }]
+        });
+        /*==============// Basic Column==============*/
+
+        /*==============Stacked column==============*/
+        var StackedCol = new Highcharts.Chart({
+                chart: {
+                    renderTo: 'stacked_column',
+                    type: 'column'
+                },
+                title: {
+                    text: 'Stacked column chart'
+                },
+                xAxis: {
+                    categories: ['Apples', 'Oranges', 'Pears', 'Grapes', 'Bananas']
+                },
+                yAxis: {
+                    min: 0,
+                    title: {
+                        text: 'Total fruit consumption'
+                    },
+                    stackLabels: {
+                        enabled: true,
+                        style: {
+                            fontWeight: 'bold',
+                            color: (Highcharts.theme && Highcharts.theme.textColor) || 'gray'
+                        }
+                    }
+                },
+                legend: {
+                    align: 'right',
+                    x: -30,
+                    verticalAlign: 'top',
+                    y: 25,
+                    floating: true,
+                    backgroundColor: (Highcharts.theme && Highcharts.theme.background2) || 'white',
+                    borderColor: '#CCC',
+                    borderWidth: 1,
+                    shadow: false
+                },
+                tooltip: {
+                    formatter: function () {
+                        return '<b>' + this.x + '</b><br/>' +
+                            this.series.name + ': ' + this.y + '<br/>' +
+                            'Total: ' + this.point.stackTotal;
+                    }
+                },
+                plotOptions: {
+                    column: {
+                        stacking: 'normal',
+                        dataLabels: {
+                            enabled: true,
+                            color: (Highcharts.theme && Highcharts.theme.dataLabelsColor) || 'white',
+                            style: {
+                                textShadow: '0 0 3px black'
+                            }
+                        }
+                    }
+                },
+                series: [{
+                    name: 'John',
+                    data: [5, 3, 4, 7, 2]
+                }, {
+                    name: 'Jane',
+                    data: [2, 2, 3, 2, 1]
+                }, {
+                    name: 'Joe',
+                    data: [3, 4, 4, 2, 5]
+                }]
+        });
+        /*==============//Stacked column==============*/
+
+    /*==============Column with rotated labels==============*/
+    var ColRotLab = new Highcharts.Chart({
+            chart: {
+                renderTo: 'column_rotated_label',
+                type: 'column'
+            },
+            title: {
+                text: 'Column with rotated labels'
+            },
+            subtitle: {
+                text: 'Source: Fleet Management'
+            },
+            xAxis: {
+                type: 'category',
+                labels: {
+                    rotation: -45,
+                    style: {
+                        fontSize: '13px',
+                        fontFamily: 'Verdana, sans-serif'
+                    }
+                }
+            },
+            yAxis: {
+                min: 0,
+                title: {
+                    text: 'Population (millions)'
+                }
+            },
+            legend: {
+                enabled: false
+            },
+            tooltip: {
+                pointFormat: 'Population in 2008: <b>{point.y:.1f} millions</b>'
+            },
+            series: [{
+                name: 'Population',
+                data: [
+                    ['Shanghai', 23.7],
+                    ['Lagos', 16.1],
+                    ['Instanbul', 14.2],
+                    ['Karachi', 14.0],
+                    ['Mumbai', 12.5],
+                    ['Moscow', 12.1],
+                    ['São Paulo', 11.8],
+                    ['Beijing', 11.7],
+                    ['Guangzhou', 11.1],
+                    ['Delhi', 11.1],
+                    ['Shenzhen', 10.5],
+                    ['Seoul', 10.4],
+                    ['Jakarta', 10.0],
+                    ['Kinshasa', 9.3],
+                    ['Tianjin', 9.3],
+                    ['Tokyo', 9.0],
+                    ['Cairo', 8.9],
+                    ['Dhaka', 8.9],
+                    ['Mexico City', 8.9],
+                    ['Lima', 8.9]
+                ],
+                dataLabels: {
+                    enabled: true,
+                    rotation: -90,
+                    color: '#FFFFFF',
+                    align: 'right',
+                    format: '{point.y:.1f}', // one decimal
+                    y: 10, // 10 pixels down from the top
+                    style: {
+                        fontSize: '13px',
+                        fontFamily: 'Verdana, sans-serif'
+                    }
+                }
+            }]
+        });
+        /*==============Column with rotated labels==============*/
+
+
+
+
+
+
+    };
+
+
+})();
        
 
     			</div>	
