--- a/src/app/pie-charts/pie-charts.html
+++ b/src/app/pie-charts/pie-charts.html
@@ -22,7 +22,11 @@
 			  useWrapMode : true,
 			  theme:'merbivore',
 			  mode: 'html'}">
+&#x3C;!--Pie Chart--&#x3E;
+&#x3C;div id=&#x22;pie_chart&#x22; style=&#x22;min-width: 310px; height: 400px;  margin: 0 auto&#x22;&#x3E;&#x3C;/div&#x3E;
 
+&#x3C;!--Pie Chart with Legend--&#x3E;
+&#x3C;div id=&#x22;pie_chart_legend&#x22; style=&#x22;min-width: 310px; height: 400px;  margin: 0 auto&#x22;&#x3E;&#x3C;/div&#x3E;
 			</div>	
 		</md-tab>
 		<md-tab label="CSS">
@@ -42,6 +46,115 @@
 			  mode: 'javascript'}">
 
 
+(function() {    
+    'use strict';
+
+    angular.module('fm')
+        .controller('PieCtrl', PieCtrl);
+
+    PieCtrl.$inject = ['$scope']
+
+    function PieCtrl($scope) {
+        var vm = this;
+
+        /*===============PIE CHARTS================*/  
+
+        var PieChart = new Highcharts.Chart({
+                chart: {
+                    renderTo: 'pie_chart',
+                    plotBackgroundColor: null,
+                    plotBorderWidth: null,
+                    plotShadow: false
+                },
+                title: {
+                    text: 'Pie Chart'
+                },
+                tooltip: {
+                    pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+                },
+                plotOptions: {
+                    pie: {
+                        allowPointSelect: true,
+                        cursor: 'pointer',
+                        dataLabels: {
+                            enabled: true,
+                            format: '<b>{point.name}</b>: {point.percentage:.1f} %',
+                            style: {
+                                color: (Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black'
+                            }
+                        }
+                    }
+                },
+                series: [{
+                    type: 'pie',
+                    name: 'Browser share',
+                    data: [
+                        ['Firefox',   45.0],
+                        ['IE',       26.8],
+                        {
+                            name: 'Chrome',
+                            y: 12.8,
+                            sliced: true,
+                            selected: true
+                        },
+                        ['Safari',    8.5],
+                        ['Opera',     6.2],
+                        ['Others',   0.7]
+                    ]
+                }]
+
+            });
+        /*===============// PIE CHARTS================*/
+
+        /*===============Peie chart with legend================*/ 
+        var PieChartLabel = new Highcharts.Chart({
+            chart: {
+                renderTo: 'pie_chart_legend',
+                plotBackgroundColor: null,
+                plotBorderWidth: null,
+                plotShadow: false
+            },
+            title: {
+                text: 'Pie chart with Legend'
+            },
+            tooltip: {
+                pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+            },
+            plotOptions: {
+                pie: {
+                    allowPointSelect: true,
+                    cursor: 'pointer',
+                    dataLabels: {
+                        enabled: false
+                    },
+                    showInLegend: true
+                }
+            },
+            series: [{
+                type: 'pie',
+                name: 'Browser share',
+                data: [
+                    ['Firefox',   45.0],
+                    ['IE',       26.8],
+                    {
+                        name: 'Chrome',
+                        y: 12.8,
+                        sliced: true,
+                        selected: true
+                    },
+                    ['Safari',    8.5],
+                    ['Opera',     6.2],
+                    ['Others',   0.7]
+                ]
+            }]
+        });
+    
+         /*===============Peie chart with legend================*/ 
+
+    };
+
+
+})();
 
        
 
