--- a/src/app/dynamic-charts/dynamic-charts.html
+++ b/src/app/dynamic-charts/dynamic-charts.html
@@ -1,7 +1,7 @@
 <md-toolbar class="md-whiteframe-z1">   
     <div class="md-toolbar-tools panel2" layout="row">
 		<div flex> 
-			<h2 class="black-clr">PIE CHARTS</h2>
+			<h2 class="black-clr">DYNAMIC CHARTS</h2>
 		</div>
 		<div flex>
 			<div style="text-align: right;">
@@ -44,7 +44,7 @@
 
 
        
-
+ 
     			</div>	
 		</md-tab>
 	</md-tabs>
@@ -55,5 +55,12 @@
             <div id="dynamic_chart" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 		</div>
 		<div class="label">Spline updating each second</div>
+	</section>    
+
+	<section layout="row" layout-sm="column" layout-wrap layout-padding style="text-align: left">
+        <div flex>
+
+		</div>
+		<div class="label">Master detail chart переделать</div>
 	</section>
 </md-content>
