--- a/src/app/area-charts/area-charts.html
+++ b/src/app/area-charts/area-charts.html
@@ -376,6 +376,6 @@
 		<div flex>
 			
 		</div>
-		<div class="label">Sparkline Charts Надо переделывать на Angular</div>
+		<div class="label">Sparkline Charts НАДО ПЕРЕДЕЛЫВАТЬ на Angular</div>
 	</section>
 </md-content>
